--- a/styles.css
+++ b/styles.css
@@ -99,13 +99,13 @@ a {
   color: white;
 }
 
-.hero__img {
-  /* padding: 5em 0; */
-  /* width: 22%; */
-  /* top: 0; */
-  /* right: 0; */
-  /* border: solid 2px red; */
-}
+/* .hero__img { */
+/* padding: 5em 0; */
+/* width: 22%; */
+/* top: 0; */
+/* right: 0; */
+/* border: solid 2px red; */
+/* } */
 
 img {
   width: 100%;
