--- a/styles.css
+++ b/styles.css
@@ -1,120 +1,134 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap");
 
+/* font-family: "Playfair Display", serif; */
+/* font-family: "Roboto", sans-serif; */
+
 :root {
+  /* Colors */
   --light: #f3eed9;
-  --brown: #824936;
-  --blueDark: #222c2a;
+  --dark: #824936;
+  --black: #222c2a;
+
+  /* Fonts sizes */
+  --fxs: 1.125rem;
+  --fs: 1.3125rem;
+  --fl: 2.25rem;
+  --fxl: 3.75rem;
+
+  /* Font families */
+  --pd: "Playfair Display", serif;
+  --rb: "Roboto", sans-serif;
 }
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-p {
-  font-family: roboto, sans-serif;
-  font-size: 1.125rem;
-  line-height: 1.5em;
-  font-weight: 300;
-}
-
-.container {
-  width: 70.5rem;
-  margin: 0 auto;
-}
-
-.row {
-  display: flex;
-  width: 80%;
-  justify-content: space-between;
-  /* align-items: center; */
-  margin: 0 auto;
-}
-
-.col {
-  width: 45%;
-}
-
-.secFirst {
-  background-color: var(--light);
-  color: var(--brown);
-  display: flex;
-  padding: 12em 10em 12em 10em;
-  flex-direction: column;
-  text-align: center;
-}
-
-.secFirst h1 {
-  font-size: 3.75rem;
-  font-family: "Playfair Display", serif;
-  line-height: 1em;
-  max-width: 50rem;
-  margin: 0 auto;
-}
-
-.secFirst h2 {
-  font-size: 1.3125rem;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 0.4em;
-  line-height: 3em;
-}
-
-.secSecond {
-  padding: 0 0 5em 0;
-}
-
-.secSecond h3 {
-  text-align: center;
-  font-family: "Playfair Display", serif;
-  font-size: 2.25rem;
-  color: var(--brown);
-  padding: 2em 0 1em 0;
-}
-
-.secThird {
-  background-color: var(--blueDark);
-  padding: 5em 0 5em 0;
-}
-
-.secThird h3 {
-  font-family: "Playfair Display", serif;
-  font-size: 2.25rem;
-  color: var(--light);
-  padding: 0 0 1em 0;
-}
-
-.secThird p {
-  color: white;
-}
-
-.secFourth {
-  background-color: var(--brown);
-  padding: 5em 0 5em 0;
-}
-
-.secFourth h3 {
-  font-family: "Playfair Display", serif;
-  font-size: 2.25rem;
-  color: var(--light);
-  padding: 0 0 1em 0;
-}
-
-.secFourth p {
-  color: white;
+  background-color: black;
 }
 
 img {
   width: 100%;
+  padding: 1em 0 1em 0;
 }
 
-/* .col img { */
-/* width: 50%; */
-/* align-self: center; */
-/* } */
+.container {
+  margin: 0 auto;
+  width: 80%;
+}
 
-.red {
-  border: solid 2px red;
+.container--white {
+  padding: 1em 0;
+  background-color: white;
+}
+
+.container--dark {
+  padding: 1em 0;
+
+  background-color: var(--dark);
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--light);
+  justify-content: center;
+  align-items: center;
+}
+.intro h1 {
+  text-align: center;
+  color: var(--dark);
+  background-color: var(--light);
+
+  font-size: var(--fxl);
+}
+
+.intro p {
+  text-align: center;
+  color: var(--dark);
+  background-color: var(--light);
+  font-family: var(--rb);
+  font-size: var(--fs);
+}
+
+.dark,
+.black {
+  background-color: white;
+  width: 100%;
+}
+
+.dark {
+  color: var(--dark);
+  text-align: center;
+}
+
+.black,
+.white {
+  font-family: var(--rb);
+}
+
+.light--black {
+  background-color: var(--black);
+}
+
+.container--black {
+  padding: 1em 0;
+
+  background-color: var(--black);
+}
+
+.light {
+  color: var(--light);
+}
+
+.light--dark {
+  background-color: var(--dark);
+}
+
+.white {
+  color: white;
+}
+
+h2 {
+  padding: 1em 0 1em 0;
+  font-size: var(--fl);
+  font-family: var(--pd);
+}
+
+p {
+  padding: 0 0 1em 0;
+}
+
+@media (min-width: 600px) {
+  .row {
+    display: flex;
+    justify-content: center;
+    align-content: ;
+  }
+  .img {
+    justify-self: center;
+    align-self: center;
+  }
 }
